--- a/app/views/company/_listing_node.html.haml
+++ b/app/views/company/_listing_node.html.haml
@@ -1,6 +1,6 @@
 .branch{:class=>(listing_node.reflection? ? " reflection" : " column")}
   .shift
-  .item
+  .item{:class=>"icon "+(listing_node.reflection? ? "im-table" : "im-column")}
     .item-detail
       %table
         %tr
@@ -17,11 +17,11 @@
             %td.link.label{:id=>"#{listing_node.key}_label"}
               =render(:partial=>"listing_node_column_label", :object=>listing_node)
               
-            %td.comparator{:id=>"#{listing_node.key}_comparator"}=render(:partial=>"listing_node_comparison", :object=>listing_node)
+            %td.item-tool.comparator{:id=>"#{listing_node.key}_comparator"}=render(:partial=>"listing_node_comparison", :object=>listing_node)
           -unless listing_node.root?
             -unless listing_node.reflection?
-              %td.position{:id=>"#{listing_node.key}_position"}=render(:partial=>"listing_node_position", :object=>listing_node)
-            %td.delete
+              %td.item-tool.position{:id=>"#{listing_node.key}_position"}=render(:partial=>"listing_node_position", :object=>listing_node)
+            %td.item-tool.delete
               =link_to_remote(tg(:delete), {:url=>{:action=>:listing_node_delete, :id=>listing_node.id}, :update=>listing_node.parent.key, :loading=>"onLoading();", :loaded=>"onLoaded();"}, :class=>"icon im-delete")
 
 -if listing_node.reflection?
