Fixes bug due to last migration. Change Rails from 3.0.0.rc2 to 3.0.0 Adds the possibility to change orientation of the presentation in purchase/sale orders creation.
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1634 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/management/_sale_payment_form.html.haml
+++ b/app/views/management/_sale_payment_form.html.haml
@@ -6,8 +6,8 @@
   -f.field :sale_payment, :to_bank_on
   -f.field :sale_payment, :received
   -f.field :sale_payment, :mode_id, :choices=>{:reflection=>:sale_payment_modes}, :new=>{:action=>:sale_payment_mode_create}
-  -f.title :embankable
-  -f.field :sale_payment, :embanker_id, :choices=>{:reflection=>:users}
+  -f.title :depositable
+  -f.field :sale_payment, :responsible_id, :choices=>{:reflection=>:users}
   -f.field :sale_payment, :paid_on
   -f.field :sale_payment, :check_number
   -f.field :sale_payment, :account_number
