--- a/app/views/management/_deposit_form.html.haml
+++ b/app/views/management/_deposit_form.html.haml
@@ -2,11 +2,11 @@
   - f.error :deposit
   - f.title :infos
   - f.field :deposit, :cash_id, :choices=>{:reflection=>:self_bank_accounts}, :new=>{:controller=>:accountancy, :action=>:cash_create, :nature=>:bank_account}
-  - f.field :deposit, :embanker_id, :choices=>{:reflection=>:users}
+  - f.field :deposit, :responsible_id, :choices=>{:reflection=>:users}
   - f.field :deposit, :created_on
   - f.field :deposit, :comment
 
 =hidden_field_tag :mode_id, @deposit.mode_id
 
 %h2=tc :sale_payments
-=dyta :embankable_payments
+=dyta :depositable_payments
