--- a/app/views/management/_purchase_payment_form.html.haml
+++ b/app/views/management/_purchase_payment_form.html.haml
@@ -6,7 +6,7 @@
   -f.field :purchase_payment, :to_bank_on
   -f.field :purchase_payment, :delivered
   -f.field :purchase_payment, :mode_id, :choices=>{:reflection=>:purchase_payment_modes}, :new=>{:action=>:purchase_payment_mode_create}
-  -f.title :embankable
+  -f.title :depositable
   -f.field :purchase_payment, :responsible_id, :choices=>{:reflection=>:users}
   -f.field :purchase_payment, :paid_on
   -f.field :purchase_payment, :check_number
