--- a/app/views/management/sale_payments.html.haml
+++ b/app/views/management/sale_payments.html.haml
@@ -8,7 +8,7 @@
         %td.submit{:rowspan=>2}=submit_tag tg(:search_go), :name=>nil
       %tr
         %td.crit
-          -for state in [:all, :unparted, :unreceived, :waiting, :unembanked]
+          -for state in [:all, :unparted, :unreceived, :waiting, :undeposited]
             =radio_button_tag("state", state, (state.to_s == session[:sale_payment_state]))
             %label{:for=>"state_#{state}"}=tc("sale_payments_states.#{state}")
 
