Fixes compatibilty bugs for SQL Server Adds version number in the interface
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1639 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/authentication/login.html.haml
+++ b/app/views/authentication/login.html.haml
@@ -3,7 +3,7 @@
 -if request.env["HTTP_USER_AGENT"].to_s.match(/MSIE (\d+\.\d+);/)
   -bad_browser = ($1.to_f <= 6)
 #login.login{:style=>"display:none"}
-  .logoban
+  .logoban{:title=>Ekylibre.version}
   =form_tag({:company=>params[:company], :url=>params[:url]}) do
     %table
       -if @current_company or @users
