Fixes the adaptations for SQL Server
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1641 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/management/_sale_order.html.haml
+++ b/app/views/management/_sale_order.html.haml
@@ -4,9 +4,9 @@
     -t.update @sale_order
   -if @sale_order.lines.size>0
     -if (@sale_order.estimate? and @sale_order.deliveries.size <= 0)
-      -t.link :sale_order_confirm, {:id=>@sale_order.id}, :method=>:post, :confirm=>tc(:are_you_sure_to_confirm)
+      -t.link :sale_order_confirm, {:id=>@sale_order.id}, :method=>:post, :confirm=>tc(:are_you_sure_you_want_to_confirm)
     -if (@sale_order.amount_with_taxes > @sale_order.invoiced_amount and @sale_order.deliveries.size <= 0)
-      -t.link :sale_order_invoice, {:id=>@sale_order.id}, :method=>:post, :confirm=>tc(:are_you_sure_to_invoice)
+      -t.link :sale_order_invoice, {:id=>@sale_order.id}, :method=>:post, :confirm=>tc(:are_you_sure_you_want_to_invoice)
   -t.print :sale_order, :id=>@sale_order.id
 
 -columns ||= 1
