--- a/app/views/management/sale_order_deliveries.html.haml
+++ b/app/views/management/sale_order_deliveries.html.haml
@@ -2,8 +2,8 @@
 
 =toolbar do |t|
   -t.print :sale_order, :id=>@sale_order.id
-  -#t.link(:sale_order_invoice, {:id=>@sale_order.id}, {:method=>:post, :confirm=>tc(:are_you_sure_to_invoice)}) if @sale_order.amount_with_taxes > @sale_order.invoiced_amount
-  -t.link(:sale_order_invoice, {:id=>@sale_order.id, :has_deliveries=>true}, {:method=>:post, :confirm=>tc(:are_you_sure_to_invoice)}) if not @sale_order.invoiced
+  -#t.link(:sale_order_invoice, {:id=>@sale_order.id}, {:method=>:post, :confirm=>tc(:are_you_sure_you_want_to_invoice)}) if @sale_order.amount_with_taxes > @sale_order.invoiced_amount
+  -t.link(:sale_order_invoice, {:id=>@sale_order.id, :has_deliveries=>true}, {:method=>:post, :confirm=>tc(:are_you_sure_you_want_to_invoice)}) if not @sale_order.invoiced
 
 
 -#if @undelivered
