Begins to fix problem on select_all in migrations. Need to use Arel.
git-svn-id: https://www.ekylibre.org/svn/ekylibre/trunk@1642 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/company/index.html.haml
+++ b/app/views/company/index.html.haml
@@ -13,4 +13,4 @@
     -for controller in menus[1..-1].collect{|x| x[:name]}
       =li_link_to t("actions.#{controller}.index"), :controller=>controller, :action=>:index
 
-=svg_test_tag
+=#svg_test_tag
