--- a/public/themes/tekyla/stylesheets/screen.css
+++ b/public/themes/tekyla/stylesheets/screen.css
@@ -1,5 +1,17 @@
-* {margin:0; padding:0; font-family: sans-serif;}
-/* BLUE EKYLIBRE : #3060FF */
+@font-face { font-family: LiberationSans; src: url("../fonts/LiberationSans-Regular.ttf"); }
+@font-face { font-family: LiberationSans; src: url("../fonts/LiberationSans-Bold.ttf"); font-weight: bold; }
+@font-face { font-family: LiberationSans; src: url("../fonts/LiberationSans-Italic.ttf"); font-style: italic; }
+@font-face { font-family: LiberationSans; src: url("../fonts/LiberationSans-BoldItalic.ttf"); font-weight: bold; font-style: italic; }
+@font-face { font-family: LiberationMono; src: url("../fonts/LiberationMono-Regular.ttf"); }
+@font-face { font-family: LiberationMono; src: url("../fonts/LiberationMono-Bold.ttf"); font-weight: bold; }
+@font-face { font-family: LiberationMono; src: url("../fonts/LiberationMono-Italic.ttf"); font-style: italic; }
+@font-face { font-family: LiberationMono; src: url("../fonts/LiberationMono-BoldItalic.ttf"); font-weight: bold; font-style: italic; }
+@font-face { font-family: LiberationSerif; src: url("../fonts/LiberationSerif-Regular.ttf"); }
+@font-face { font-family: LiberationSerif; src: url("../fonts/LiberationSerif-Bold.ttf"); font-weight: bold; }
+@font-face { font-family: LiberationSerif; src: url("../fonts/LiberationSerif-Italic.ttf"); font-style: italic; }
+@font-face { font-family: LiberationSerif; src: url("../fonts/LiberationSerif-BoldItalic.ttf"); font-weight: bold; font-style: italic; }
+
+* {margin:0; padding:0; font-family: LiberationSans, sans-serif;}
 html {background: #C9D7F1;}
 fieldset { border:1px solid #95b0e4; -moz-border-radius: 4px; padding:  8px 0px 0px; margin: 1px 1px 8px; background: url(../images/columns.png) repeat-x top; }
 fieldset legend { padding: 0 4px;  margin: 0 4px; color: #047; font-size: 15px; font-weight: bold;}
@@ -89,7 +101,6 @@ html[dir="ltr"] #main.with-side { padding-left: 0px; }
 html[dir="rtl"] #main.with-side { padding-right: 0px; }
 html[dir="ltr"] #main.with-help { padding-right: 0px; }
 html[dir="rtl"] #main.with-help { padding-left: 0px; }
-/*#legals { margin:0; padding:4px 8px; height: 0px; background: #C9D7F1; font-size:13px; color: #047; text-align: center; }*/
 
 .nav { min-height: 32px; }
 .nav .title { color: #750; font-size: 20px; height: 24px; overflow:hidden; padding:4px 8px; font-weight: normal; margin:0; }
@@ -121,7 +132,7 @@ html[dir="rtl"] .help { float:left; margin-right: 8px; }
 .content h1 { font-size: 17px; margin: 0px 0px 16px; color: #750; font-weight:normal; color: #000}
 .content h2 { font-size: 15px; margin: 8px 0px 4px; border-left: 10px solid #543; padding: 0 0 0 4px; border-bottom: 1px dotted #543; color: #000}
 .content h3 { font-size: 13px; margin: 4px 0 2px 10px; border-left: 10px solid #B82; padding: 0 0 0 4px; border-bottom: 1px dotted #B82; font-weight: bold; color: #000 }
-.content pre { font-family: monospace; color: #777; background: #FFF; padding: 8px; margin: 8px 0; }
+.content pre { font-family: LiberationMono, monospace; color: #777; background: #FFF; padding: 8px; margin: 8px 0; }
 .content ul { padding: 4px 2em; }
 .content ul li { list-style-type: square; }
 .content ol { padding: 4px 2em; }
@@ -230,7 +241,7 @@ table.invex tr td.space{ width: 8px }
 
 .evalue { border-collapse: collapse; border-bottom: 1px dotted #CCC; margin: 0px 4px; }
 .evalue .label, .evalue .value { padding:1px 4px;  vertical-align: middle; }
-.evalue .code { font-family: monospace; }
+.evalue .code { font-family: LiberationMono, monospace; }
 .evalue .label { color: #777; }
 .evalue.verti td { width: 250px }
 .evalue.hori .label { width:176px;  }
@@ -290,7 +301,7 @@ table.formalize td .hint         { color: #600;  background:#FDE; padding:2px; }
 table.formalize td .hint span    { color: #B54; }
 table.formalize td .note         { color: #777; }
 table.formalize tr.title th { padding: 16px 8px 2px; border-bottom: 0px dotted #012; color: #012; font-size:13px; border-bottom: 1px solid #CCC; font-weight:bold; }
-table.formalize td.input .code { font-family: monospace; }
+table.formalize td.input .code { font-family: LiberationMono, monospace; }
 a.act img { border: none !important; }
 /*
 table.formalize tr.odd  td { background: #E5ECF6; }
@@ -302,7 +313,7 @@ table.formalize a.fastadd { margin: 0px 8px; }
 
 
 /*.actions { text-align:center; padding:4px !important; background: #e9e9a8; border-top: 1px solid #BEBEBB; margin: 8px 0 0; }*/
-.actions { text-align:center; padding:4px !important; background: #CEC; border: 1px solid #ACA; margin: 0; }
+.actions { text-align:center; padding:4px !important; background: #CEC; border-top: 1px solid #ACA; margin: 0; }
 .actions * { margin: 0px 8px; }
 .actions a { padding: 4px; margin: 4px; }
 .actions a:link, .actions a:visited, .actions a:hover { color:#080; } /* 080 */
