--- a/app/views/management/_products_search.html.haml
+++ b/app/views/management/_products_search.html.haml
@@ -7,5 +7,5 @@
         %td.label=tl(:active)
         %td=check_box_tag(:product_active, "1", session[:product_active].nil? ? true : session[:product_active])
         %td.label=tl(:category)
-        %td=select(:product, :category_id, @current_company.product_categories.collect{|s| [s.name, s.id]}, :include_blank=>"-- Toutes --", :selected=>session[:product_category_id])
+        %td=select(:product, :category_id, @current_company.product_categories.collect{|s| [s.name, s.id]}, :include_blank=>tl(:all), :selected=>session[:product_category_id])
         %td.submit=submit_tag tg(:search_go)
