--- a/app/views/production/_land_parcel_form.html.haml
+++ b/app/views/production/_land_parcel_form.html.haml
@@ -7,11 +7,8 @@
   -# f.field :land_parcel, :polygon
   -f.field :land_parcel, :area_measure
   -f.field :land_parcel, :area_unit_id, :choices=>{:reflection=>:surface_units}, :new=>{:controller=>:company, :action=>:unit_create, :base=>'m2'}
-  -# f.field :land_parcel, :master
-= formalize(:id=>:master_select) do |f|
-  -#f.field :land_parcel, :parent_id, :choices=>{:reflection=>:land_parcels}
-= formalize do |f|
-  - f.field :land_parcel, :description, :field=>:textarea
+  -f.field :land_parcel, :started_on
+  -f.field :land_parcel, :description, :field=>:textarea
 
 :javascript
   window.master = function() { toggleElement('master_select', $('land_parcel_master').checked); };
