--- a/app/views/production/_land_parcel_subdivision_form.html.haml
+++ b/app/views/production/_land_parcel_subdivision_form.html.haml
@@ -1,9 +1,9 @@
--id="k"+rand.to_s
+-id="k"+rand.to_s[2..-1]
 -measure = @land_parcel.area_measure-params[:used].to_f
 -measure = 0 if measure < 0 or params[:mode] != "new-line"
 %tr.odd{:id=>id}
-  %td=text_field_tag("subdivisions[#{id}][name]", @land_parcel.name.succ)
+  %td=text_field_tag("subdivisions[#{id}][name]", (params[:name]||@land_parcel.name).succ, :id=>"subdivisions_#{id}_name")
   %td=text_field_tag("subdivisions[#{id}][area_measure]", measure, :class=>"area", :onkeyup=>"t5()")+@land_parcel.area_unit.name
-  %td.act=link_to_remote(tl(:add), {:url=>{:action=>:land_parcel_divide, :mode=>"new-line", :id=>@land_parcel.id}, :with=>"'used='+$('total_area').innerHTML", :update=>:subdivisions, :position=>:bottom, :complete=>"t5()"}, :class=>"icon im-create")
-  %td.act=link_to_function(tl(:delete), "$('#{id}').remove();", :class=>"icon im-delete") if params[:mode] == "new-line"
+  %td.act=link_to_remote(tl(:add), {:url=>{:action=>:land_parcel_divide, :mode=>"new-line", :id=>@land_parcel.id}, :with=>"'used='+$('total_area').innerHTML+'&name='+encodeURIComponent($('subdivisions_#{id}_name').value)", :update=>:subdivisions, :position=>:bottom, :complete=>"t5()"}, :class=>"icon im-create")
+  %td.act=link_to_function(tl(:delete), "$('#{id}').remove(); t5();", :class=>"icon im-delete") if params[:mode] == "new-line"
 
