--- a/app/views/production/_production_chain_form.html.haml
+++ b/app/views/production/_production_chain_form.html.haml
@@ -2,5 +2,5 @@
   -f.error 'production_chain'
   -f.title :general_informations
   -f.field :production_chain, :name
-  -f.field :production_chain, :building_id, :choices=>{:reflection=>:buildings}
+  -f.field :production_chain, :building_id, :choices=>{:reflection=>:buildings}, :new=>{:controller=>:management, :action=>:warehouse_create, :reservoir=>0}
   -f.field :production_chain, :comment, :field=>:textarea
