--- a/app/views/production/_production_chain_conveyor_form.html.haml
+++ b/app/views/production/_production_chain_conveyor_form.html.haml
@@ -2,9 +2,16 @@
   -f.error 'production_chain_conveyor'
   -f.title :general_informations
   -f.field :production_chain_conveyor, :production_chain_id, :choices=>{:reflection=>:production_chains}
-  -f.field :production_chain_conveyor, :name
-  -f.field :production_chain_conveyor, :source_id, :choices=>{:reflection=>:production_chain_operations, :include_blank=>""}
-  -f.field :production_chain_conveyor, :target_id, :choices=>{:reflection=>:production_chain_operations, :include_blank=>""}
-  -f.field :production_chain_conveyor, :product_id, :choices=>{:reflection=>:products}, :new=>{:controller=>:management, :action=>:product_create}
-  -f.field :production_chain_conveyor, :flow
+  -#f.field :production_chain_conveyor, :name
   -f.field :production_chain_conveyor, :comment, :field=>:textarea
+  -f.title :product
+  -f.field :production_chain_conveyor, :product_id, :choices=>{:reflection=>:products}, :new=>{:controller=>:management, :action=>:product_create}
+  -f.field :production_chain_conveyor, :check_on_input
+  -f.field :production_chain_conveyor, :check_on_output
+  -f.field :production_chain_conveyor, :flow
+  -f.title :source
+  -f.field :production_chain_conveyor, :source_id, :choices=>{:reflection=>:production_chain_operations, :include_blank=>""}, :new=>{:action=>:production_chain_operation_create, :production_chain_id=>@production_chain_conveyor.production_chain_id}
+  -f.field :production_chain_conveyor, :source_quantity
+  -f.title :target
+  -f.field :production_chain_conveyor, :target_id, :choices=>{:reflection=>:production_chain_operations, :include_blank=>""}, :new=>{:action=>:production_chain_operation_create, :production_chain_id=>@production_chain_conveyor.production_chain_id}
+  -f.field :production_chain_conveyor, :target_quantity
