--- a/app/views/production/_production_chain_operation.html.haml
+++ b/app/views/production/_production_chain_operation.html.haml
@@ -1,34 +1,43 @@
 -operation = production_chain_operation
-
-%table.operation-graph
-  %tr
-    %td.conveyors.input-conveyors
-      -for conveyor in operation.input_conveyors
-        %table.conveyor
-          %tr
-            -if conveyor.source
-              %td.operation=link_to(conveyor.source.name, :action=>:production_chain_operation, :id=>conveyor.source_id) 
-            %td.rail
-            %td
-              .information
-                %h3=link_to(conveyor.name, :action=>:production_chain_conveyor_update, :id=>conveyor.id)
-                .flow=tl(:x_unit_of_product_per_second, :quantity=>conveyor.flow, :unit=>conveyor.unit.name, :product=>link_to(conveyor.product.name, :action=>:product, id=>conveyor.product_id, :controller=>:management).html_safe).html_safe
-                .comment=conveyor.comment
-            %td.rail
-            %td.arrow
-    %td.operation
-      %strong=operation.name
-    %td.conveyors.output-conveyors
-      -for conveyor in operation.output_conveyors
-        %table.conveyor
-          %tr
-            %td.rail
-            %td
-              .information
-                %h3=link_to(conveyor.name, :action=>:production_chain_conveyor_update, :id=>conveyor.id)
-                .flow=tl(:x_unit_of_product_per_second, :quantity=>conveyor.flow, :unit=>conveyor.unit.name, :product=>link_to(conveyor.product.name, :action=>:product, id=>conveyor.product_id, :controller=>:management).html_safe).html_safe
-                .comment=conveyor.comment
-            %td.rail
-            %td.arrow
-            -if conveyor.target
-              %td.operation=link_to(conveyor.target.name, :action=>:production_chain_operation, :id=>conveyor.target_id) 
+-ic = operation.input_conveyors
+-oc = operation.output_conveyors
+.chain{:id=>"operation#{operation.id}"}
+  .delete
+    =link_to(tl(:up), {:action=>:production_chain_operation_up, :id=>operation.id}, :method=>:post, :class=>"icon im-up") unless operation.first?
+    =link_to(tl(:down), {:action=>:production_chain_operation_down, :id=>operation.id}, :method=>:post, :class=>"icon im-down") unless operation.last?
+    =link_to tl(:delete), {:action=>:production_chain_operation_delete, :id=>operation.id}, :confirm=>tl(:are_you_sure_you_want_to_delete), :method=>:delete, :class=>"icon im-delete"        
+  %h2=operation.name
+  %table.operation-graph
+    %tr
+      %td.conveyors.input-conveyors
+        -for conveyor in ic
+          %table.conveyor
+            %tr
+              -if conveyor.source
+                %td.operation=link_to(conveyor.source.name, :action=>:production_chain, :id=>conveyor.production_chain_id, :anchor=>"operation#{conveyor.source_id}")
+              =render :partial=>"production_chain_conveyor", :object=>conveyor
+        -if ic.size<=0 or (operation.nature != "input")
+          %table.conveyor
+            %tr
+              %td.rail
+              %td
+                .cell.new=link_to tl(:new), :action=>:production_chain_conveyor_create, :production_chain_id=>operation.production_chain_id, :target_id=>operation.id
+              %td.rail
+              %td.arrow
+      %td.operation.master=link_to operation.name, :action=>:production_chain_operation_update, :id=>operation.id
+      %td.conveyors.output-conveyors
+        -for conveyor in oc
+          %table.conveyor
+            %tr
+              =render :partial=>"production_chain_conveyor", :object=>conveyor
+              -if conveyor.target
+                %td.operation=link_to(conveyor.target.name, :action=>:production_chain, :id=>conveyor.production_chain_id, :anchor=>"operation#{conveyor.target_id}")
+        -if oc.size<=0 or (operation.nature == "input")
+          %table.conveyor.new
+            %tr
+              %td.rail
+              %td
+                .cell.new=link_to tl(:new), :action=>:production_chain_conveyor_create, :production_chain_id=>operation.production_chain_id, :source_id=>operation.id
+              %td.rail
+              %td.arrow
+  
