--- a/app/views/production/production_chain.html.haml
+++ b/app/views/production/production_chain.html.haml
@@ -2,26 +2,18 @@
 -if @current_user.can? :build_production_chains
   =toolbar do |t|
     -t.update @production_chain
+    -t.link :production_chain_operation_create, :production_chain_id=>@production_chain.id
+    -t.play @production_chain
 
-  =list_evalue(3) do |l|
-    -l.evalue @production_chain, :name
-    -l.evalue @production_chain, :comment
-    -l.evalue @production_chain, :building
+  -#=list_evalue(3) do |l|
+  -#  -l.evalue @production_chain, :name
+  -#  -l.evalue @production_chain, :comment
+  -#  -l.evalue @production_chain, :building
 
-  .toto{:style=>"text-align: center"}=render :partial=>"production_chain_operation", :collection=>@production_chain.operations
-  %table.invex
-    %tr
-      %td
-        %h2=tl(:operations)
-        =toolbar do |t|
-          -t.link :production_chain_operation_create, :production_chain_id=>@production_chain.id
-        =dyta :production_chain_operations
-      %td.space
-      %td
-        %h2=tl(:conveyors)
-        =toolbar do |t|
-          -t.link :production_chain_conveyor_create, :production_chain_id=>@production_chain.id
-        =dyta :production_chain_conveyors
-
-
-%h2=tl(:active_productions)
+  #chains=render :partial=>"production_chain_operation", :collection=>@production_chain.operations
+  -if @production_chain.unused_conveyors.size > 0
+    %h2=ProductionChain.human_attribute_name(:unused_conveyors)
+    -for conveyor in @production_chain.unused_conveyors
+      %table.conveyor
+        %tr
+          =render :partial=>"production_chain_conveyor", :object=>conveyor
